--- a/UI/greetingpage.ui
+++ b/UI/greetingpage.ui
@@ -6,46 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>503</width>
-    <height>450</height>
+    <width>650</width>
+    <height>700</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>GreetingPage</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="CheckAccount">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>100</y>
-      <width>191</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Already have an account?</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="Label">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>60</y>
-      <width>181</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Let's meet new people</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="BtnRegister">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>360</y>
-      <width>80</width>
+      <x>230</x>
+      <y>520</y>
+      <width>190</width>
       <height>31</height>
      </rect>
     </property>
@@ -53,16 +27,75 @@
      <string>Register</string>
     </property>
    </widget>
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QLabel" name="RegLabel">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>150</y>
-      <width>141</width>
-      <height>24</height>
+      <x>230</x>
+      <y>480</y>
+      <width>291</width>
+      <height>31</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_5">
+    <property name="text">
+     <string>Don't have an account? Let's register!</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="BtnLogIn">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>320</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Log in</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>130</y>
+      <width>281</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <layout class="QFormLayout" name="formLayout">
+     <item row="0" column="0" colspan="2">
+      <widget class="QLabel" name="Greeting">
+       <property name="text">
+        <string>Welcome to the HobbyHub, my friend!</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" colspan="2">
+      <widget class="QLabel" name="Label">
+       <property name="text">
+        <string>Let's meet new people</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0" colspan="2">
+      <widget class="QLabel" name="CheckAccount">
+       <property name="text">
+        <string>Already have an account?</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>240</y>
+      <width>211</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <widget class="QLabel" name="Login">
        <property name="text">
@@ -75,55 +108,16 @@
      </item>
     </layout>
    </widget>
-   <widget class="QLabel" name="RegLabel">
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>320</y>
-      <width>291</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Don't have an account? Let's register!</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="BtnLogIn">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>220</y>
-      <width>80</width>
+      <x>220</x>
+      <y>280</y>
+      <width>211</width>
       <height>31</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Log in</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="Greeting">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>20</y>
-      <width>321</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Welcome to the HobbyHub, my friend!</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="layoutWidget_2">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>180</y>
-      <width>141</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_6">
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
      <item>
       <widget class="QLabel" name="Password">
        <property name="text">
@@ -132,35 +126,39 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="password"/>
+      <widget class="QLineEdit" name="password">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QLabel" name="forgotlabel">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>270</y>
-      <width>241</width>
+      <x>210</x>
+      <y>390</y>
+      <width>151</width>
       <height>31</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="forgotlabel">
-       <property name="text">
-        <string>Forgot password?</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="BtnForgottenPass">
-       <property name="text">
-        <string>Forgot</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <property name="text">
+     <string>Forgot password?</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="BtnForgottenPass">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>390</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Forgot</string>
+    </property>
    </widget>
    <zorder>layoutWidget</zorder>
    <zorder>CheckAccount</zorder>
@@ -171,13 +169,14 @@
    <zorder>Greeting</zorder>
    <zorder>layoutWidget_2</zorder>
    <zorder>BtnRegister</zorder>
+   <zorder>BtnRegister</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>503</width>
+     <width>650</width>
      <height>21</height>
     </rect>
    </property>
