--- a/UI/registrationpage.ui
+++ b/UI/registrationpage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>650</width>
+    <height>700</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="BtnRegister">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>210</y>
+     <x>260</x>
+     <y>360</y>
      <width>131</width>
      <height>31</height>
     </rect>
@@ -29,30 +29,30 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>90</y>
+     <x>240</x>
+     <y>240</y>
      <width>171</width>
      <height>31</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QLabel" name="Email">
+     <widget class="QLabel" name="Login">
       <property name="text">
-       <string>Email</string>
+       <string>Login</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="email"/>
+     <widget class="QLineEdit" name="login"/>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>140</y>
+     <x>240</x>
+     <y>290</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -66,7 +66,11 @@
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="password"/>
+     <widget class="QLineEdit" name="password">
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
