--- a/HobbyHub/listofmathes.ui
+++ b/HobbyHub/listofmathes.ui
@@ -29,165 +29,61 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>50</y>
-     <width>231</width>
-     <height>71</height>
+     <x>90</x>
+     <y>80</y>
+     <width>311</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="title">
     <string>Match1</string>
    </property>
-   <widget class="QGroupBox" name="groupBox_2">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>70</y>
-      <width>231</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>Match1</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>30</y>
+      <y>40</y>
       <width>61</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Name</string>
+     <string>George</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>30</y>
+      <y>40</y>
       <width>61</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Age</string>
+     <string>20</string>
     </property>
    </widget>
-  </widget>
-  <widget class="QGroupBox" name="groupBox_3">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>130</y>
-     <width>231</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Match2</string>
-   </property>
-   <widget class="QGroupBox" name="groupBox_4">
+   <widget class="QPushButton" name="BtnCheckProfile">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>70</y>
-      <width>231</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>Match1</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
+      <x>180</x>
       <y>30</y>
-      <width>61</width>
-      <height>31</height>
+      <width>121</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Name</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>30</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Age</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QGroupBox" name="groupBox_5">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>210</y>
-     <width>231</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Match3</string>
-   </property>
-   <widget class="QGroupBox" name="groupBox_6">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>70</y>
-      <width>231</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>Match1</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>30</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Name</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>30</y>
-      <width>51</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Age</string>
+     <string>Check profile</string>
     </property>
    </widget>
   </widget>
   <widget class="QPushButton" name="BtnBackToAcc">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>250</x>
      <y>350</y>
-     <width>131</width>
+     <width>151</width>
      <height>41</height>
     </rect>
    </property>
