--- a/HobbyHub/fillingdatapage.ui
+++ b/HobbyHub/fillingdatapage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>700</height>
+    <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>630</y>
+     <y>720</y>
      <width>111</width>
      <height>41</height>
     </rect>
@@ -157,7 +157,7 @@
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>340</y>
+     <y>430</y>
      <width>171</width>
      <height>211</height>
     </rect>
@@ -179,7 +179,7 @@
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>170</y>
+     <y>310</y>
      <width>251</width>
      <height>111</height>
     </rect>
@@ -201,7 +201,7 @@
    <property name="geometry">
     <rect>
      <x>460</x>
-     <y>570</y>
+     <y>660</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -284,7 +284,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>410</y>
+     <y>450</y>
      <width>261</width>
      <height>41</height>
     </rect>
@@ -297,7 +297,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>460</y>
+     <y>500</y>
      <width>361</width>
      <height>41</height>
     </rect>
@@ -359,7 +359,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>520</y>
+     <y>560</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -401,37 +401,11 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget_5">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>290</y>
-     <width>251</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_11">
-    <item>
-     <widget class="QLabel" name="LifestyleLabel">
-      <property name="text">
-       <string>Lifestyle</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="BtnChooseLifestyle">
-      <property name="text">
-       <string>Choose</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>520</y>
+     <y>560</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -449,11 +423,11 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>520</y>
+     <y>560</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -471,11 +445,11 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>570</y>
+     <y>610</y>
      <width>211</width>
      <height>31</height>
     </rect>
@@ -493,7 +467,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>50</x>
@@ -515,6 +489,64 @@
       <property name="text">
        <string>Choose</string>
       </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>170</y>
+     <width>251</width>
+     <height>131</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Lifestyle</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QListWidget" name="listWidget">
+      <item>
+       <property name="text">
+        <string>Attitude to politics</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Worldview</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>The main things in life</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>The main things in human</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Attitude to smoking</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Attitude to alcohol</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Zodiac sign</string>
+       </property>
+      </item>
      </widget>
     </item>
    </layout>
